refactor: Migrate to Java 17
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.java.migrate.UpgradeToJava17?organizationId=U3ByaW5n

Co-authored-by: Moderne <team@moderne.io>

--- a/spring-geode-project/spring-geode/spring-geode.gradle
+++ b/spring-geode-project/spring-geode/spring-geode.gradle
@@ -17,12 +17,15 @@ dependencies {
 
 	compileOnly "com.google.code.findbugs:jsr305:$findbugsVersion"
 
+	compileOnly "com.sun.xml.ws:jaxws-rt:2.3.6"
+
 	optional "org.springframework:spring-test"
 
 	runtimeOnly "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
 
 	// See additional testImplementation dependencies declared in the testDependencies project extension
 	// defined in the DependencySetPlugin.
+	testImplementation "com.sun.xml.ws:jaxws-rt:2.3.6"
 	testImplementation("org.springframework.boot:spring-boot-starter-test") {
 		exclude group: "org.skyscreamer", module: "jsonassert"
 	}
